--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="pl">
 
 <head>
+    <title>I16 Projekt 4</title>
     <script src="script.js" defer></script>
     <link rel="stylesheet" href="styles.css">
     <meta charset="UTF-8">
