--- a/zad1/index.html
+++ b/zad1/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="pl">
 
 <head>
+    <title>Zad 1</title>
     <script src="script.js" defer></script>
     <link rel="stylesheet" href="../styles.css">
     <meta charset="UTF-8">
@@ -17,8 +18,7 @@
         Korzystamy z plików Coockies
     </tiny>
     <form>
-        <input type="text" id="str"> <input type="button" value="Wyślij" id="app"> <input type="button" value="Resetuj"
-            id="res">
+    <input type="text" id="str"> <input type="submit" value="Wyślij" id="app"> <input type="button" value="Resetuj" id="res">
     </form>
     <ul id="list"></ul>
     </ul>
