--- a/zad2/index.html
+++ b/zad2/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="pl">
 
 <head>
+    <title>Zad 2</title>
     <script src="script.js" defer></script>
     <link rel="stylesheet" href="../styles.css">
     <meta charset="UTF-8">
